fixed card overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
   font-family: 'averia serif libre';
   margin-top: 15vh;
@@ -27,6 +28,10 @@ html {
   padding: 5vh;
   color: white;
   text-shadow: 0 0 5px black; 
+}
+
+#footer {
+  width: 100vw;
 }
 
 .App-logo {
@@ -61,10 +66,12 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   position: relative;
   height: 50vh;
   width: 20vw;
   margin: 1%;
+  padding-bottom: 1%;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   box-shadow:
@@ -78,7 +85,7 @@ html {
 }
 
 .beast img {
-  max-height: 50%;
+  max-height: 20vh;
   max-width: 90%;
 }
 
